# py_tenma_app

./: 404.html  README.md  _config.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
docs/: index.md
scripts/: install_dependencies.bat  run_app.bat
search/: search_index.json
src/: py_module.py  py_tenma_app.py
src/templates/: base.html  control_ps.html  home.html  index.html  live_ps_info.html  templates.py
tests/: test_demo_tc.py
