[project]
name = "py_tenma_app"
authors = [{name = "chaitu-ycr", email = "chaitu.ycr@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
]
dynamic = ["version", "description"]
requires-python = ">=3.6"
dependencies = [
    "pylint",
    "pytest",
    "flit",
    "mkdocs",
    "mkdocstrings",
    "mkdocs-material",
    "flask"
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project.urls]
Home = "https://github.com/chaitu-ycr/py_tenma_app"
